src/snapshots/enderpy__lexer__tests__string-literals-6.snap
---
source: src/lexer.rs
description: "'''hello'''"
---
[
    Token {
        kind: StringLiteral,
        value: String(
            "'''hello'''",
        ),
    },
]
