src/snapshots/enderpy__lexer__tests__test-lexer-0.snap
---
source: src/lexer.rs
description: 1+2
---
[
    Token {
        kind: Integer,
        value: Number(
            "1",
        ),
    },
    Token {
        kind: Plus,
        value: None,
    },
    Token {
        kind: Integer,
        value: Number(
            "2",
        ),
    },
]
