src/snapshots/enderpy__lexer__tests__test-lexer-1.snap
---
source: src/lexer.rs
description: a+b
---
[
    Token {
        kind: Identifier,
        value: String(
            "a",
        ),
    },
    Token {
        kind: Plus,
        value: None,
    },
    Token {
        kind: Identifier,
        value: String(
            "b",
        ),
    },
]
