src/snapshots/enderpy__lexer__tests__test-lexer-10.snap
---
source: src/lexer.rs
description: ","
---
[
    Token {
        kind: Comma,
        value: None,
    },
]
