src/snapshots/enderpy__lexer__tests__test-lexer-13.snap
---
source: src/lexer.rs
description: "="
---
[
    Token {
        kind: Assign,
        value: None,
        start: 0,
        end: 1,
    },
]
