src/snapshots/enderpy__lexer__tests__test-lexer-14.snap
---
source: src/lexer.rs
description: "\\"
---
[
    Token {
        kind: BackSlash,
        value: None,
    },
]
