src/snapshots/enderpy__lexer__tests__test-lexer-15.snap
---
source: src/lexer.rs
description: "#"
---
[
    Token {
        kind: Sharp,
        value: None,
        start: 0,
        end: 1,
    },
]
