src/snapshots/enderpy__lexer__tests__test-lexer-16.snap
---
source: src/lexer.rs
description: $
---
[
    Token {
        kind: Dollar,
        value: None,
        start: 0,
        end: 1,
    },
]
