src/snapshots/enderpy__lexer__tests__test-lexer-17.snap
---
source: src/lexer.rs
description: "?"
---
[
    Token {
        kind: QuestionMark,
        value: None,
    },
]
