src/snapshots/enderpy__lexer__tests__test-lexer-18.snap
---
source: src/lexer.rs
description: "`"
---
[
    Token {
        kind: BackTick,
        value: None,
        start: 0,
        end: 1,
    },
]
